@@ -21,51 +21,59 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.logging.Logger;
-import java.util.stream.Collectors;
 import com.fasterxml.jackson.core.JsonProcessingException;
-import javafx.scene.layout.AnchorPane;
-import javafx.scene.text.Text;
 import javafx.stage.Stage;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class AppController {
-    Logger logger = Logger.getLogger(getClass().getName());
+    private static final String USERNAME_NOT_AVAILABLE = "Username is not available";
+    private static final String CONTENT_TYPE = "Content-Type";
+    private static final String APPLICATION_JSON = "application/json";
+    private static final String MONDAY = "monday";
+    private static final String TUESDAY = "tuesday";
+    private static final String WEDNESDAY = "wednesday";
+    private static final String THURSDAY = "thursday";
+    private static final String FRIDAY = "friday";
 
-    @FXML private TextField create_recipe_name_textfield;
-    @FXML private TextArea create_recipe_description_textfield;
-    @FXML private TextField create_recipe_ingredients_textfield;
-    @FXML private TextArea create_recipe_steps_textfield;
-    @FXML private ListView<String> recipes_all_recipes_listview;
-    @FXML private TextArea recipes_recipe_details;
-    @FXML private TextField recipes_recipe_name;
-    @FXML private ListView<String> planner_recipes_in_planner_listview;
+
+
+    private static final Logger logger = LoggerFactory.getLogger(AppController.class);
+
+    @FXML private TextField createRecipeNameTextfield;
+    @FXML private TextArea createRecipeDescriptionTextfield;
+    @FXML private TextField createRecipeIngredientsTextfield;
+    @FXML private TextArea createRecipeStepsTextfield;
+    @FXML private ListView<String> recipesAllRecipesListview;
+    @FXML private TextArea recipesRecipeDetails;
+    @FXML private TextField recipesRecipeName;
+    @FXML private ListView<String> plannerRecipesInPlannerListview;
     @FXML private TabPane tabPane;
     @FXML
-    private ChoiceBox<String> planner_recipes_in_planner_mon_choices;
+    private ChoiceBox<String> plannerRecipesInPlannerMonChoices;
     @FXML
-    private ChoiceBox<String> planner_recipes_in_planner_tue_choices;
+    private ChoiceBox<String> plannerRecipesInPlannerTueChoices;
     @FXML
-    private ChoiceBox<String> planner_recipes_in_planner_wed_choices;
+    private ChoiceBox<String> plannerRecipesInPlannerWedChoices;
     @FXML
-    private ChoiceBox<String> planner_recipes_in_planner_thu_choices;
+    private ChoiceBox<String> plannerRecipesInPlannerThuChoices;
     @FXML
-    private ChoiceBox<String> planner_recipes_in_planner_fri_choices;
+    private ChoiceBox<String> plannerRecipesInPlannerFriChoices;
 
     @FXML
     private ListView<String> planListViewRecipes;
 
-    private Map<String, String> dayToRecipeMap = new HashMap<>();
-    private Map<String, RecipeDTO> dayToRecipeDetails = new HashMap<>();
+    private final Map<String, String> dayToRecipeMap = new HashMap<>();
+    private final Map<String, RecipeDTO> dayToRecipeDetails = new HashMap<>();
 
+    private static final HttpClient httpClient = HttpClient.newHttpClient();
 
-    @FXML
-    private Button submitButton;
     private boolean isEditMode = false;
-    private Long editingRecipeId = null;  // Store the ID of the recipe being edited
+    private Long editingRecipeId = null;
 
 
-    private String currentUsername;
-    private String getCurrentUsername() {
+    private static String currentUsername;
+    static String getCurrentUsername() {
         return currentUsername;
     }
     void setCurrentUsername(String username) {
@@ -73,9 +81,8 @@ public class AppController {
     }
     @FXML
     public void initialize() {
-        recipes_all_recipes_listview.getSelectionModel().selectedItemProperty().addListener((obs, oldSelection, newSelection) -> {
-            showRecipeDetails();
-        });
+        recipesAllRecipesListview.getSelectionModel().selectedItemProperty().addListener((obs, oldSelection, newSelection) ->
+                showRecipeDetails());
         fetchRecipes();
         logger.info(("Username:"+getCurrentUsername()));
         setupTabChangeListener();
@@ -83,14 +90,15 @@ public class AppController {
 
     }
     @FXML
+    @SuppressWarnings("unused")
     private void showRecipeDetail(ActionEvent event) {
         String selected = planListViewRecipes.getSelectionModel().getSelectedItem();
         if (selected == null) {
-            System.out.println("No recipe selected");
+            logger.info("No recipe selected");
             return;
         }
         String day = selected.split(":")[0].trim();
-        RecipeDTO details = dayToRecipeDetails.get(day); // Directly retrieve as RecipeDTO
+        RecipeDTO details = dayToRecipeDetails.get(day);
         if (details != null) {
             openRecipeCard(details);
         }
@@ -112,8 +120,7 @@ public class AppController {
 
             stage.show();
         } catch (IOException e) {
-            System.out.println("Error loading the recipe card view: " + e.getMessage());
-            e.printStackTrace();
+            logger.error("Error loading the recipe card view: {}", e.getMessage(), e);
         }
     }
 
@@ -121,11 +128,11 @@ public class AppController {
 
 
     private void setupChoiceBoxListeners() {
-        planner_recipes_in_planner_mon_choices.getSelectionModel().selectedItemProperty().addListener((obs, oldVal, newVal) -> setRecipeForDay("monday", newVal, planner_recipes_in_planner_mon_choices));
-        planner_recipes_in_planner_tue_choices.getSelectionModel().selectedItemProperty().addListener((obs, oldVal, newVal) -> setRecipeForDay("tuesday", newVal, planner_recipes_in_planner_tue_choices));
-        planner_recipes_in_planner_wed_choices.getSelectionModel().selectedItemProperty().addListener((obs, oldVal, newVal) -> setRecipeForDay("wednesday", newVal, planner_recipes_in_planner_wed_choices));
-        planner_recipes_in_planner_thu_choices.getSelectionModel().selectedItemProperty().addListener((obs, oldVal, newVal) -> setRecipeForDay("thursday", newVal, planner_recipes_in_planner_thu_choices));
-        planner_recipes_in_planner_fri_choices.getSelectionModel().selectedItemProperty().addListener((obs, oldVal, newVal) -> setRecipeForDay("friday", newVal, planner_recipes_in_planner_fri_choices));
+        plannerRecipesInPlannerMonChoices.getSelectionModel().selectedItemProperty().addListener((obs, oldVal, newVal) -> setRecipeForDay(MONDAY, newVal, plannerRecipesInPlannerMonChoices));
+        plannerRecipesInPlannerTueChoices.getSelectionModel().selectedItemProperty().addListener((obs, oldVal, newVal) -> setRecipeForDay(TUESDAY, newVal, plannerRecipesInPlannerTueChoices));
+        plannerRecipesInPlannerWedChoices.getSelectionModel().selectedItemProperty().addListener((obs, oldVal, newVal) -> setRecipeForDay(WEDNESDAY, newVal, plannerRecipesInPlannerWedChoices));
+        plannerRecipesInPlannerThuChoices.getSelectionModel().selectedItemProperty().addListener((obs, oldVal, newVal) -> setRecipeForDay(THURSDAY, newVal, plannerRecipesInPlannerThuChoices));
+        plannerRecipesInPlannerFriChoices.getSelectionModel().selectedItemProperty().addListener((obs, oldVal, newVal) -> setRecipeForDay(FRIDAY, newVal, plannerRecipesInPlannerFriChoices));
     }
     private void setRecipeForDay(String day, String recipeDetails, ChoiceBox<String> choiceBox) {
         if (recipeDetails == null || recipeDetails.isEmpty()) return;
@@ -133,34 +140,34 @@ public class AppController {
 
         String username = getCurrentUsername();
         if (username == null) {
-            System.out.println("Username is not available");
+            logger.info(USERNAME_NOT_AVAILABLE);
             return;
         }
 
         String requestUri = String.format("http://localhost:8080/planners/%s/setRecipeForDay/%d/%s", username, recipeId, day);
         HttpRequest request = HttpRequest.newBuilder()
                 .uri(URI.create(requestUri))
-                .header("Content-Type", "application/json")
+                .header(CONTENT_TYPE, APPLICATION_JSON)
                 .POST(HttpRequest.BodyPublishers.noBody())
                 .build();
 
-        HttpClient.newHttpClient().sendAsync(request, HttpResponse.BodyHandlers.ofString())
+        httpClient.sendAsync(request, HttpResponse.BodyHandlers.ofString())
                 .thenApply(HttpResponse::statusCode)
                 .thenAccept(statusCode -> {
                     if (statusCode == 200) {
                         Platform.runLater(() -> {
-                            System.out.println("Recipe set for " + day + " successfully");
+                            logger.info("Recipe set for {} successfully", day);
                             choiceBox.getSelectionModel().select(recipeDetails);  // Re-select the item to ensure it stays visible
                         });
                     } else {
-                        Platform.runLater(() -> System.out.println("Failed to set recipe for " + day + ", status code: " + statusCode));
+                        Platform.runLater(() -> logger.warn("Failed to set recipe for {}, status code: {}", day, statusCode));
                     }
                 }).exceptionally(ex -> {
-                    System.out.println("Exception occurred while setting recipe for " + day + ": " + ex.getMessage());
-                    ex.printStackTrace();
+                    logger.error("Exception occurred while setting recipe for {}: {}", day, ex.getMessage(), ex);
                     return null;
                 });
     }
+
     private void setupTabChangeListener() {
         tabPane.getSelectionModel().selectedItemProperty().addListener((obs, oldTab, newTab) -> {
             if (newTab != null && "Planner".equals(newTab.getText())) {
@@ -168,14 +175,14 @@ public class AppController {
                 restoreChoiceBoxSelections();
             }
             if (newTab != null && "Plan".equals(newTab.getText())) {
-                fetchWeeklyPlan();  // This should fetch the weekly plan and update listViewRecipes
+                fetchWeeklyPlan();
             }
         });
     }
     private void fetchWeeklyPlan() {
         String username = getCurrentUsername();
         if (username == null) {
-            System.out.println("Username is not set. Please ensure the user is logged in.");
+            logger.info("Username is not set. Please ensure the user is logged in.");
             return;
         }
 
@@ -185,19 +192,19 @@ public class AppController {
                 .GET()
                 .build();
 
-        HttpClient.newHttpClient().sendAsync(request, HttpResponse.BodyHandlers.ofString())
+        httpClient.sendAsync(request, HttpResponse.BodyHandlers.ofString())
                 .thenApply(HttpResponse::body)
                 .thenAccept(this::updatePlanListView)
                 .exceptionally(ex -> {
-                    System.out.println("Failed to fetch weekly plan: " + ex.getMessage());
-                    ex.printStackTrace();
+                    logger.error("Failed to fetch weekly plan: {}", ex.getMessage());
                     return null;
                 });
     }
     private void updatePlanListView(String json) {
         ObjectMapper mapper = new ObjectMapper();
         try {
-            Map<String, RecipeDTO> weeklyPlan = mapper.readValue(json, new TypeReference<Map<String, RecipeDTO>>() {});
+            Map<String, RecipeDTO> weeklyPlan = mapper.readValue(json, new TypeReference<>() {
+            });
             ObservableList<String> items = FXCollections.observableArrayList();
             weeklyPlan.forEach((day, recipe) -> {
                 if (recipe != null) {
@@ -207,18 +214,17 @@ public class AppController {
             });
             Platform.runLater(() -> planListViewRecipes.setItems(items));
         } catch (JsonProcessingException e) {
-            System.out.println("Error parsing weekly plan: " + e.getMessage());
-            e.printStackTrace();
+            logger.error("Error parsing weekly plan", e);
         }
     }
 
 
     private void restoreChoiceBoxSelections() {
-        restoreSelection(planner_recipes_in_planner_mon_choices, dayToRecipeMap.get("monday"));
-        restoreSelection(planner_recipes_in_planner_tue_choices, dayToRecipeMap.get("tuesday"));
-        restoreSelection(planner_recipes_in_planner_wed_choices, dayToRecipeMap.get("wednesday"));
-        restoreSelection(planner_recipes_in_planner_thu_choices, dayToRecipeMap.get("thursday"));
-        restoreSelection(planner_recipes_in_planner_fri_choices, dayToRecipeMap.get("friday"));
+        restoreSelection(plannerRecipesInPlannerMonChoices, dayToRecipeMap.get(MONDAY));
+        restoreSelection(plannerRecipesInPlannerTueChoices, dayToRecipeMap.get(TUESDAY));
+        restoreSelection(plannerRecipesInPlannerWedChoices, dayToRecipeMap.get(WEDNESDAY));
+        restoreSelection(plannerRecipesInPlannerThuChoices, dayToRecipeMap.get(THURSDAY));
+        restoreSelection(plannerRecipesInPlannerFriChoices, dayToRecipeMap.get(FRIDAY));
     }
 
     private void restoreSelection(ChoiceBox<String> choiceBox, String selection) {
@@ -232,45 +238,45 @@ public class AppController {
         String method = isEditMode ? "PUT" : "POST";
 
         String json = String.format("{\"title\":\"%s\", \"description\":\"%s\", \"ingredients\":\"%s\", \"instructions\":\"%s\"}",
-                create_recipe_name_textfield.getText(),
-                create_recipe_description_textfield.getText(),
-                create_recipe_ingredients_textfield.getText(),
-                create_recipe_steps_textfield.getText());
+                createRecipeNameTextfield.getText(),
+                createRecipeDescriptionTextfield.getText(),
+                createRecipeIngredientsTextfield.getText(),
+                createRecipeStepsTextfield.getText());
 
         HttpRequest request = HttpRequest.newBuilder()
                 .uri(URI.create(uri))
-                .header("Content-Type", "application/json")
+                .header(CONTENT_TYPE, APPLICATION_JSON)
                 .method(method, HttpRequest.BodyPublishers.ofString(json))
                 .build();
 
-        HttpClient.newHttpClient().sendAsync(request, HttpResponse.BodyHandlers.ofString())
-                .thenAccept(response -> {
-                    Platform.runLater(() -> {
-                        if (response.statusCode() == 200 || response.statusCode() == 201) {
-                            clearForm();
-                            fetchRecipes();
-                            logger.info(isEditMode ? "Recipe updated successfully" : "Recipe created successfully");
-                            isEditMode = false;  // Reset the mode to 'create' after successful submission
-                            editingRecipeId = null; // Reset the editing ID
-                        } else {
-                            logger.severe("Failed to submit recipe, status code: " + response.statusCode());
-                        }
-                    });
-                }).exceptionally(ex -> {
-                    ex.printStackTrace();
+        httpClient.sendAsync(request, HttpResponse.BodyHandlers.ofString())
+                .thenAccept(response -> Platform.runLater(() -> {
+                    if (response.statusCode() == 200 || response.statusCode() == 201) {
+                        clearForm();
+                        fetchRecipes();
+                        logger.info(isEditMode ? "Recipe updated successfully" : "Recipe created successfully");
+                        isEditMode = false;
+                        editingRecipeId = null;
+                    } else {
+                        logger.error("Failed to submit recipe, status code: {}", response.statusCode());
+                    }
+                })).exceptionally(ex -> {
+                    logger.error("Exception occurred while submitting recipe", ex);
                     return null;
                 });
     }
+
+
     @FXML
     private void onEditRecipe() {
-        String selected = recipes_all_recipes_listview.getSelectionModel().getSelectedItem();
+        String selected = recipesAllRecipesListview.getSelectionModel().getSelectedItem();
         if (selected != null && !selected.isEmpty()) {
             Long recipeId = Long.parseLong(selected.split(" - ")[0]);
             loadRecipeForEditing(recipeId);
         }
     }
     private void loadRecipeForEditing(Long recipeId) {
-        HttpClient.newHttpClient().sendAsync(
+        httpClient.sendAsync(
                         HttpRequest.newBuilder().uri(URI.create("http://localhost:8080/recipes/" + recipeId)).GET().build(),
                         HttpResponse.BodyHandlers.ofString())
                 .thenApply(HttpResponse::body)
@@ -279,29 +285,28 @@ public class AppController {
                         ObjectMapper mapper = new ObjectMapper();
                         RecipeDTO recipe = mapper.readValue(jsonString, RecipeDTO.class);
                         Platform.runLater(() -> {
-                            create_recipe_name_textfield.setText(recipe.getTitle());
-                            create_recipe_description_textfield.setText(recipe.getDescription());
-                            create_recipe_ingredients_textfield.setText(recipe.getIngredients());
-                            create_recipe_steps_textfield.setText(recipe.getInstructions());
+                            createRecipeNameTextfield.setText(recipe.getTitle());
+                            createRecipeDescriptionTextfield.setText(recipe.getDescription());
+                            createRecipeIngredientsTextfield.setText(recipe.getIngredients());
+                            createRecipeStepsTextfield.setText(recipe.getInstructions());
                             isEditMode = true;
                             editingRecipeId = recipeId;
                             tabPane.getSelectionModel().select(0);  // Assuming the editor tab index is 0
                         });
                     } catch (JsonProcessingException e) {
-                        // Log and handle the exception
-                        logger.severe("Failed to parse recipe data: " + e.getMessage());
+                        logger.error("Failed to parse recipe data", e);
                     }
                 }).exceptionally(ex -> {
-                    logger.severe("Error retrieving recipe data: " + ex.getMessage());
+                    logger.error("Error retrieving recipe data", ex);
                     return null;
                 });
     }
 
     private void clearForm() {
-        create_recipe_name_textfield.clear();
-        create_recipe_description_textfield.clear();
-        create_recipe_ingredients_textfield.clear();
-        create_recipe_steps_textfield.clear();
+        createRecipeNameTextfield.clear();
+        createRecipeDescriptionTextfield.clear();
+        createRecipeIngredientsTextfield.clear();
+        createRecipeStepsTextfield.clear();
     }
 
     private void fetchRecipes() {
@@ -310,14 +315,13 @@ public class AppController {
                 .GET()
                 .build();
 
-        HttpClient client = HttpClient.newHttpClient();
-        client.sendAsync(request, HttpResponse.BodyHandlers.ofString())
+        httpClient.sendAsync(request, HttpResponse.BodyHandlers.ofString())
                 .thenAccept(response -> {
                     if (response.statusCode() == 200) {
                         updateRecipesListView(response.body());
                     }
                 }).exceptionally(ex -> {
-                    ex.printStackTrace();
+                    logger.error("Failed to fetch recipes", ex);
                     return null;
                 });
     }
@@ -325,85 +329,83 @@ public class AppController {
     private void updateRecipesListView(String json) {
         List<String> displayedRecipes = parseRecipesFromJson(json).stream()
                 .map(recipe -> recipe.getId() + " - " +recipe.getTitle() + " - " + recipe.getIngredients())
-                .collect(Collectors.toList());
+                .toList();
 
-        Platform.runLater(() -> {
-            recipes_all_recipes_listview.setItems(FXCollections.observableArrayList(displayedRecipes));
-        });
+        Platform.runLater(() -> recipesAllRecipesListview.setItems(FXCollections.observableArrayList(displayedRecipes)));
     }
 
     private List<Recipe> parseRecipesFromJson(String json) {
         ObjectMapper mapper = new ObjectMapper();
         try {
-            return mapper.readValue(json, new TypeReference<List<Recipe>>() {});
+            return mapper.readValue(json, new TypeReference<>() {
+            });
         } catch (JsonProcessingException e) {
-            e.printStackTrace();
+            logger.error("Failed to parse recipes from JSON: {}", e.getMessage());
             return Collections.emptyList();
         }
     }
 
     @FXML
     private void showRecipeDetails() {
-        String selectedRecipe = recipes_all_recipes_listview.getSelectionModel().getSelectedItem();
+        String selectedRecipe = recipesAllRecipesListview.getSelectionModel().getSelectedItem();
         if (selectedRecipe != null && !selectedRecipe.isEmpty()) {
-            String[] parts = selectedRecipe.split(" - ", 4); // Splits into two parts at the first occurrence of " - "
+            String[] parts = selectedRecipe.split(" - ", 4);
             if (parts.length == 4) {
-                recipes_recipe_name.setText(parts[1]); // Set the title in the TextField
-                recipes_recipe_details.setText(parts[2]); // Set the ingredients in the TextArea
+                recipesRecipeName.setText(parts[1]);
+                recipesRecipeDetails.setText(parts[2]);
             } else {
-                recipes_recipe_name.setText(selectedRecipe); // Fallback in case there is no " - " in the string
-                recipes_recipe_details.clear();
+                recipesRecipeName.setText(selectedRecipe);
+                recipesRecipeDetails.clear();
             }
         } else {
-            recipes_recipe_name.clear();
-            recipes_recipe_details.clear();
+            recipesRecipeName.clear();
+            recipesRecipeDetails.clear();
         }
     }
 
 
     @FXML
+    @SuppressWarnings("unused")
     private void addRecipeToPlan(ActionEvent actionEvent) {
-        String selectedEntry = recipes_all_recipes_listview.getSelectionModel().getSelectedItem();
+        String selectedEntry = recipesAllRecipesListview.getSelectionModel().getSelectedItem();
         if (selectedEntry == null) {
-            System.out.println("No recipe selected");
+            logger.info("No recipe selected");
             return;
         }
 
-        Long recipeId;
+        long recipeId;
         try {
             recipeId = Long.parseLong(selectedEntry.split(" - ")[0]);
         } catch (NumberFormatException e) {
-            System.out.println("Failed to extract recipe ID from the selection: " + selectedEntry);
+            logger.error("Failed to extract recipe ID from the selection: {}", selectedEntry, e);
             return;
         }
-        System.out.println("Sending recipe ID: " + recipeId);
+        logger.debug("Sending recipe ID: {}", recipeId);
 
-        String username = getCurrentUsername(); // This method should return the currently logged-in user's username
+        String username = getCurrentUsername();
         if (username == null) {
-            System.out.println("Username is not available");
+            logger.info(USERNAME_NOT_AVAILABLE);
             return;
         }
 
-        // Update the URI with both username and recipe ID as path parameters
         String requestUri = String.format("http://localhost:8080/planners/%s/addRecipe/%d", username, recipeId);
         HttpRequest request = HttpRequest.newBuilder()
                 .uri(URI.create(requestUri))
-                .header("Content-Type", "application/json")
-                .POST(HttpRequest.BodyPublishers.noBody()) // No body needed since ID is in the URL
+                .header(CONTENT_TYPE, APPLICATION_JSON)
+                .POST(HttpRequest.BodyPublishers.noBody())
                 .build();
 
-        HttpClient.newHttpClient().sendAsync(request, HttpResponse.BodyHandlers.ofString())
+        httpClient.sendAsync(request, HttpResponse.BodyHandlers.ofString())
                 .thenApply(HttpResponse::statusCode)
                 .thenAccept(statusCode -> {
-                    System.out.println("Received status code: " + statusCode);
+                    logger.info("Received status code: {}", statusCode);
                     if (statusCode == 200) {
-                        Platform.runLater(() -> System.out.println("Recipe added to planner successfully"));
+                        Platform.runLater(() -> logger.info("Recipe added to planner successfully"));
                     } else {
-                        Platform.runLater(() -> System.out.println("Failed to add recipe to planner, status code: " + statusCode));
+                        Platform.runLater(() -> logger.warn("Failed to add recipe to planner, status code: {}", statusCode));
                     }
                 }).exceptionally(ex -> {
-                    System.out.println("Exception occurred while adding recipe to planner: " + ex.getMessage());
-                    ex.printStackTrace();
+                    logger.error("Exception occurred while adding recipe to planner", ex);
                     return null;
                 });
     }
@@ -411,7 +413,7 @@ public class AppController {
     private void fetchPlannerRecipes() {
         String username = getCurrentUsername();
         if (username == null) {
-            System.out.println("Username is not set. Please ensure the user is logged in.");
+            logger.warn("Username is not set. Please ensure the user is logged in.");
             return;
         }
 
@@ -421,34 +423,34 @@ public class AppController {
                 .GET()
                 .build();
 
-        HttpClient.newHttpClient().sendAsync(request, HttpResponse.BodyHandlers.ofString())
+        httpClient.sendAsync(request, HttpResponse.BodyHandlers.ofString())
                 .thenApply(HttpResponse::body)
                 .thenAccept(this::updatePlannerRecipesListView)
                 .exceptionally(ex -> {
-                    System.out.println("Failed to fetch planner recipes: " + ex.getMessage());
-                    ex.printStackTrace();
+                    logger.error("Failed to fetch planner recipes", ex);
                     return null;
                 });
     }
 
+
     private void updatePlannerRecipesListView(String json) {
         List<String> plannerRecipes = parseRecipesFromJson(json).stream()
                 .map(recipe -> recipe.getId() + " - " + recipe.getTitle())
-                .collect(Collectors.toList());
+                .toList();
 
         Platform.runLater(() -> {
-            planner_recipes_in_planner_listview.setItems(FXCollections.observableArrayList(plannerRecipes));
+            plannerRecipesInPlannerListview.setItems(FXCollections.observableArrayList(plannerRecipes));
             updateChoiceBoxes(plannerRecipes);
         });
     }
 
     private void updateChoiceBoxes(List<String> recipes) {
         ObservableList<String> recipeOptions = FXCollections.observableArrayList(recipes);
-        updateChoiceBox(planner_recipes_in_planner_mon_choices, recipeOptions, "monday");
-        updateChoiceBox(planner_recipes_in_planner_tue_choices, recipeOptions, "tuesday");
-        updateChoiceBox(planner_recipes_in_planner_wed_choices, recipeOptions, "wednesday");
-        updateChoiceBox(planner_recipes_in_planner_thu_choices, recipeOptions, "thursday");
-        updateChoiceBox(planner_recipes_in_planner_fri_choices, recipeOptions, "friday");
+        updateChoiceBox(plannerRecipesInPlannerMonChoices, recipeOptions, MONDAY);
+        updateChoiceBox(plannerRecipesInPlannerTueChoices, recipeOptions, TUESDAY);
+        updateChoiceBox(plannerRecipesInPlannerWedChoices, recipeOptions, WEDNESDAY);
+        updateChoiceBox(plannerRecipesInPlannerThuChoices, recipeOptions, THURSDAY);
+        updateChoiceBox(plannerRecipesInPlannerFriChoices, recipeOptions, FRIDAY);
     }
 
     private void updateChoiceBox(ChoiceBox<String> choiceBox, ObservableList<String> options, String day) {
@@ -467,18 +469,19 @@ public class AppController {
 
 
     @FXML
+    @SuppressWarnings("unused")
     public void deleteRecipe(ActionEvent actionEvent) {
-        String selected = recipes_all_recipes_listview.getSelectionModel().getSelectedItem();
+        String selected = recipesAllRecipesListview.getSelectionModel().getSelectedItem();
         if (selected == null) {
-            System.out.println("No recipe selected to delete.");
+            logger.info("No recipe selected to delete.");
             return;
         }
 
-        Long recipeId;
+        long recipeId;
         try {
             recipeId = Long.parseLong(selected.split(" - ")[0]);
         } catch (NumberFormatException e) {
-            System.out.println("Invalid format for recipe ID.");
+            logger.info("Invalid format for recipe ID.");
             return;
         }
 
@@ -492,67 +495,67 @@ public class AppController {
                 .DELETE()
                 .build();
 
-        HttpClient.newHttpClient().sendAsync(request, HttpResponse.BodyHandlers.ofString())
+        httpClient.sendAsync(request, HttpResponse.BodyHandlers.ofString())
                 .thenApply(HttpResponse::statusCode)
                 .thenAccept(statusCode -> {
                     if (statusCode == 200) {
                         Platform.runLater(() -> {
-                            recipes_all_recipes_listview.getItems().removeIf(item -> item.startsWith(recipeId + " -"));
-                            System.out.println("Recipe deleted successfully.");
+                            recipesAllRecipesListview.getItems().removeIf(item -> item.startsWith(recipeId + " -"));
+                            logger.info("Recipe deleted successfully.");
                         });
                     } else {
-                        Platform.runLater(() -> System.out.println("Failed to delete recipe, status code: " + statusCode));
+                        Platform.runLater(() ->logger.warn("Failed to delete recipe, status code: {}",statusCode));
                     }
                 }).exceptionally(ex -> {
-                    System.out.println("Error deleting recipe: " + ex.getMessage());
+                    logger.error("Error deleting recipe: {}",ex.getMessage());
                     return null;
                 });
     }
 
 
     @FXML
+    @SuppressWarnings("unused")
     private void removeFromPlanner(ActionEvent actionEvent) {
-        String selectedEntry = planner_recipes_in_planner_listview.getSelectionModel().getSelectedItem();
+        String selectedEntry = plannerRecipesInPlannerListview.getSelectionModel().getSelectedItem();
         if (selectedEntry == null) {
-            System.out.println("No recipe selected in planner");
+            logger.info("No recipe selected in planner");
             return;
         }
 
-        Long recipeId;
+        long recipeId;
         try {
             recipeId = Long.parseLong(selectedEntry.split(" - ")[0]);
         } catch (NumberFormatException e) {
-            System.out.println("Failed to extract recipe ID from the planner selection: " + selectedEntry);
+            logger.error("Failed to extract recipe ID from the planner selection: {}", selectedEntry, e);
             return;
         }
 
         String username = getCurrentUsername();
         if (username == null) {
-            System.out.println("Username is not available");
+            logger.info(USERNAME_NOT_AVAILABLE);
             return;
         }
 
         String requestUri = String.format("http://localhost:8080/planners/%s/deleteRecipe/%d", username, recipeId);
         HttpRequest request = HttpRequest.newBuilder()
                 .uri(URI.create(requestUri))
-                .DELETE() // Use DELETE method
+                .DELETE()
                 .build();
 
-        HttpClient.newHttpClient().sendAsync(request, HttpResponse.BodyHandlers.ofString())
+        httpClient.sendAsync(request, HttpResponse.BodyHandlers.ofString())
                 .thenApply(HttpResponse::statusCode)
                 .thenAccept(statusCode -> {
-                    System.out.println("Received status code: " + statusCode);
+                    logger.info("Received status code: {}", statusCode);
                     if (statusCode == 200) {
                         Platform.runLater(() -> {
-                            System.out.println("Recipe removed from planner successfully");
+                            logger.info("Recipe removed from planner successfully");
                             fetchPlannerRecipes(); // Refresh the list
                         });
                     } else {
-                        Platform.runLater(() -> System.out.println("Failed to remove recipe from planner, status code: " + statusCode));
+                        Platform.runLater(() -> logger.warn("Failed to remove recipe from planner, status code: {}", statusCode));
                     }
                 }).exceptionally(ex -> {
-                    System.out.println("Exception occurred while removing recipe from planner: " + ex.getMessage());
-                    ex.printStackTrace();
+                    logger.error("Exception occurred while removing recipe from planner", ex);
                     return null;
                 });
     }
